prometheus/prometheus-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
spec:
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus
        ports:
        - name: metrics
          containerPort: 9090
        volumeMounts:
          - name: prometheus
            mountPath: /etc/prometheus/prometheus.yml
            subPath: prometheus.yml
      volumes:
        - name: prometheus
          configMap:
            name: prometheus-config
      serviceAccountName: prometheus
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  selector:
    app: prometheus
  ports:
  - port: 9090
    targetPort: 9090
    name: http-metrics
