prometheus/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-prometheus
  annotations:
    app: prometheus
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: prometheus.localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: 9090
